[tool.poetry]
name = "tbo-armatracker"
version = "0.1.0"
description = "Tracks the status of what mission is active on TBO's ARMA III server"
authors = ["David Sangrey <rixxan@hullseals.space>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "^3.4.3"
"discord.py" = "^2.3.2"
python-a2s = "^1.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
